--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <a href="">
           <img src="./images/Logo.svg" alt="Logo" />
         </a>
-        <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Services and prices</a></li>
-          <li><a href="">Barbers</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="list">
+          <li><a class="link" href="">About</a></li>
+          <li><a class="link" href="">Services and prices</a></li>
+          <li><a class="link" href="">Barbers</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="tel:+380441111111">+38 044 111 11 11</a>
+      <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
       <button type="button">Online-booking</button>
     </header>
 
@@ -34,14 +34,22 @@
     <main>
       <!-- Hero screen -->
       <section>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
               >Instagram</a
             >
           </li>
           <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
               >Youtube</a
             >
           </li>
@@ -56,7 +64,7 @@
 
       <!-- About -->
       <section>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/about-1.jpg" alt="" width="270" height="445" />
           </li>
@@ -85,7 +93,7 @@
         <p>spend your time with the best masters</p>
         <h2>Services and prices</h2>
 
-        <ul>
+        <ul class="list">
           <li>
             <p>Men’s haircut</p>
             <p>from 300 uah.</p>
@@ -103,7 +111,7 @@
             <p>from 200 uah.</p>
           </li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
             <p>Trainee’s haircut</p>
             <p>from 50 uah.</p>
@@ -126,7 +134,7 @@
 
       <!-- Features -->
       <section>
-        <ul>
+        <ul class="list">
           <li>
             <span>600</span>
             <p>Satisfied customers per day</p>
@@ -157,7 +165,7 @@
       <section>
         <p>for true enjoyers of the atmosphere</p>
         <h2>Our barbers</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/barber-1.jpg"
@@ -167,7 +175,7 @@
             />
             <h3>John Smith</h3>
             <p>Extreme Barber</p>
-            <ul>
+            <ul class="list">
               <li><a href="" aria-label="Instagram"></a></li>
               <li><a href="" aria-label="Twitter"></a></li>
               <li><a href="" aria-label="Facebook"></a></li>
@@ -183,7 +191,7 @@
             />
             <h4>Michele Doe</h4>
             <p>Extreme Barber</p>
-            <ul>
+            <ul class="list">
               <li><a href="" aria-label="Instagram"></a></li>
               <li><a href="" aria-label="Twitter"></a></li>
               <li><a href="" aria-label="Facebook"></a></li>
@@ -199,7 +207,7 @@
             />
             <h4>Alan Black</h4>
             <p>Extreme Barber</p>
-            <ul>
+            <ul class="list">
               <li><a href="" aria-label="Instagram"></a></li>
               <li><a href="" aria-label="Twitter"></a></li>
               <li><a href="" aria-label="Facebook"></a></li>
@@ -213,7 +221,7 @@
       <section>
         <p>in Latin, "barba" means "beard"</p>
         <h2>Gallery</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/gallery-1.jpg"
@@ -258,18 +266,23 @@
       <section>
         <h2>Contacts</h2>
         <address>
-          <ul>
+          <ul class="list">
             <li>
               <a
+                class="link"
                 href="https://maps.app.goo.gl/zaZMUa1HUWE6Ueb98"
                 target="_blank"
                 rel="noreferrer noopener nofollow"
                 >st. Vasilkovaya, 7A<br />Kiev, 08132</a
               >
             </li>
-            <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
             <li>
-              <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+              <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
+            </li>
+            <li>
+              <a class="link" href="mailto:barbershop@email.com"
+                >barbershop@email.com</a
+              >
             </li>
           </ul>
         </address>
@@ -280,14 +293,22 @@
 
     <footer>
       <p>&#169; Copyright 2020</p>
-      <ul>
+      <ul class="list">
         <li>
-          <a href="" target="_blank" rel="noopener noreferrer nofollow"
+          <a
+            class="link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer nofollow"
             >Instagram</a
           >
         </li>
         <li>
-          <a href="" target="_blank" rel="noopener noreferrer nofollow"
+          <a
+            class="link"
+            href=""
+            target="_blank"
+            rel="noopener noreferrer nofollow"
             >Youtube</a
           >
         </li>
