--- a/index.html
+++ b/index.html
@@ -10,56 +10,66 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Raleway:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
-      <nav>
-        <a href="">
-          <img src="./images/Logo.svg" alt="Logo" />
-        </a>
-        <ul class="list">
-          <li><a class="link" href="">About</a></li>
-          <li><a class="link" href="">Services and prices</a></li>
-          <li><a class="link" href="">Barbers</a></li>
-          <li><a class="link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
-      <button type="button">Online-booking</button>
+      <div class="container">
+        <nav>
+          <a href="./index.html">
+            <img src="./images/Logo.svg" alt="Logo" />
+          </a>
+          <ul class="list">
+            <li><a class="link header-link" href="">About</a></li>
+            <li><a class="link header-link" href="">Services and prices</a></li>
+            <li><a class="link header-link" href="">Barbers</a></li>
+            <li><a class="link header-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <a class="link header-link contact" href="tel:+380441111111"
+          >+38 044 111 11 11</a
+        >
+        <button class="button" type="button">Online-booking</button>
+      </div>
     </header>
 
     <!-- Main content -->
     <main>
       <!-- Hero screen -->
       <section>
-        <ul class="list">
-          <li>
-            <a
-              class="link"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >Instagram</a
-            >
-          </li>
-          <li>
-            <a
-              class="link"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >Youtube</a
-            >
-          </li>
-        </ul>
-        <p>A hair salon for men in Kyiv</p>
-        <h1>BarberShop</h1>
-        <p>
-          We are experts in trendy men`s haircuts. We work quickly, carefully
-          and with style.
-        </p>
+        <div class="container">
+          <ul class="list">
+            <li>
+              <a
+                class="link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >Instagram</a
+              >
+            </li>
+            <li>
+              <a
+                class="link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >Youtube</a
+              >
+            </li>
+          </ul>
+          <p class="top-title">A hair salon for men in Kyiv</p>
+          <h1>BarberShop</h1>
+          <p>
+            We are experts in trendy men`s haircuts. We work quickly, carefully
+            and with style.
+          </p>
+        </div>
       </section>
 
       <!-- About -->
