--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Raleway:wght@100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wdth,wght@75..100,300..800&family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
+    <header class="header">
       <div class="container">
         <nav>
           <a href="./index.html">
@@ -41,7 +41,7 @@
     <!-- Main content -->
     <main>
       <!-- Hero screen -->
-      <section>
+      <section class="hero">
         <div class="container">
           <ul class="list">
             <li>
@@ -65,7 +65,7 @@
           </ul>
           <p class="top-title">A hair salon for men in Kyiv</p>
           <h1>BarberShop</h1>
-          <p>
+          <p class="hero-content">
             We are experts in trendy men`s haircuts. We work quickly, carefully
             and with style.
           </p>
@@ -73,256 +73,272 @@
       </section>
 
       <!-- About -->
-      <section>
-        <ul class="list">
-          <li>
-            <img src="./images/about-1.jpg" alt="" width="270" height="445" />
-          </li>
-          <li>
-            <img src="./images/about-2.jpg" alt="" width="270" height="445" />
-          </li>
-        </ul>
-        <p>About</p>
-        <h2>Best Barbershop in your city</h2>
-        <p>
-          If you want to add more confidence to your image, you should
-          definitely visit us.
-        </p>
-        <p>
-          We are a team that never stops at what has been achieved and are
-          thirsty for changes. And when you fall into the hands of our master,
-          you will never be the same again. We are a team that is always "on the
-          same wave" with clients. Therefore, we are always ready to improve
-          everyone who comes to us!
-        </p>
-        <button type="button">Online-booking</button>
+      <section class="section">
+        <div class="container">
+          <ul class="list">
+            <li>
+              <img src="./images/about-1.jpg" alt="" width="270" height="445" />
+            </li>
+            <li>
+              <img src="./images/about-2.jpg" alt="" width="270" height="445" />
+            </li>
+          </ul>
+          <p class="top-title">About</p>
+          <h2 class="section-title">Best Barbershop in your city</h2>
+          <p class="content">
+            If you want to add more confidence to your image, you should
+            definitely visit us.
+          </p>
+          <p class="content bottom">
+            We are a team that never stops at what has been achieved and are
+            thirsty for changes. And when you fall into the hands of our master,
+            you will never be the same again. We are a team that is always "on
+            the same wave" with clients. Therefore, we are always ready to
+            improve everyone who comes to us!
+          </p>
+          <button class="button secondary" type="button">Online-booking</button>
+        </div>
       </section>
 
       <!-- Services and prices -->
-      <section>
-        <p>spend your time with the best masters</p>
-        <h2>Services and prices</h2>
+      <section class="section">
+        <div class="container">
+          <p class="top-title">spend your time with the best masters</p>
+          <h2 class="prices section-title">Services and prices</h2>
 
-        <ul class="list">
-          <li>
-            <p>Men’s haircut</p>
-            <p>from 300 uah.</p>
-          </li>
-          <li>
-            <p>Beard trim</p>
-            <p>from 300 uah.</p>
-          </li>
-          <li>
-            <p>Mustache trim</p>
-            <p>from 200 uah.</p>
-          </li>
-          <li>
-            <p>Straight razor shave</p>
-            <p>from 200 uah.</p>
-          </li>
-        </ul>
-        <ul class="list">
-          <li>
-            <p>Trainee’s haircut</p>
-            <p>from 50 uah.</p>
-          </li>
-          <li>
-            <p>Haircut under the nozzle</p>
-            <p>from 200 uah.</p>
-          </li>
-          <li>
-            <p>Children’s haircut (0-12 y.o.)</p>
-            <p>from 300 uah.</p>
-          </li>
-          <li>
-            <p>Camouflage of gray hair</p>
-            <p>from 200 uah.</p>
-          </li>
-        </ul>
-        <button type="button">Online-booking</button>
+          <ul class="prices-list">
+            <li>
+              <p class="prices-item">Men’s haircut</p>
+              <p class="prices-item">from 300 uah.</p>
+            </li>
+            <li>
+              <p class="prices-item">Beard trim</p>
+              <p class="prices-item">from 300 uah.</p>
+            </li>
+            <li>
+              <p class="prices-item">Mustache trim</p>
+              <p class="prices-item">from 200 uah.</p>
+            </li>
+            <li>
+              <p class="prices-item">Straight razor shave</p>
+              <p class="prices-item">from 200 uah.</p>
+            </li>
+          </ul>
+          <ul class="prices-list">
+            <li>
+              <p class="prices-item">Trainee’s haircut</p>
+              <p class="prices-item">from 50 uah.</p>
+            </li>
+            <li>
+              <p class="prices-item">Haircut under the nozzle</p>
+              <p class="prices-item">from 200 uah.</p>
+            </li>
+            <li>
+              <p class="prices-item">Children’s haircut (0-12 y.o.)</p>
+              <p class="prices-item">from 300 uah.</p>
+            </li>
+            <li>
+              <p class="prices-item">Camouflage of gray hair</p>
+              <p class="prices-item">from 200 uah.</p>
+            </li>
+          </ul>
+          <button class="button secondary" type="button">Online-booking</button>
+        </div>
       </section>
 
       <!-- Features -->
-      <section>
-        <ul class="list">
-          <li>
-            <span>600</span>
-            <p>Satisfied customers per day</p>
-          </li>
-          <li>
-            <span>50</span>
-            <p>Awards for excellent service</p>
-          </li>
-          <li>
-            <span>20</span>
-            <p>Kyiv’s best barbers</p>
-          </li>
-          <li>
-            <span>100</span>
-            <p>Gifts for regular customers</p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <ul class="list">
+            <li>
+              <span>600</span>
+              <p>Satisfied customers per day</p>
+            </li>
+            <li>
+              <span>50</span>
+              <p>Awards for excellent service</p>
+            </li>
+            <li>
+              <span>20</span>
+              <p>Kyiv’s best barbers</p>
+            </li>
+            <li>
+              <span>100</span>
+              <p>Gifts for regular customers</p>
+            </li>
+          </ul>
 
-        <p>old traditional school</p>
-        <h2>Why people come to us?</h2>
-        <p>
-          Only good things are said about us. But it's better to see and feel 1
-          time than read 10 times.
-        </p>
+          <p>old traditional school</p>
+          <h2>Why people come to us?</h2>
+          <p>
+            Only good things are said about us. But it's better to see and feel
+            1 time than read 10 times.
+          </p>
+        </div>
       </section>
 
       <!-- Barbers -->
-      <section>
-        <p>for true enjoyers of the atmosphere</p>
-        <h2>Our barbers</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/barber-1.jpg"
-              alt="working barber"
-              width="370"
-              height="346"
-            />
-            <h3>John Smith</h3>
-            <p>Extreme Barber</p>
-            <ul class="list">
-              <li><a href="" aria-label="Instagram"></a></li>
-              <li><a href="" aria-label="Twitter"></a></li>
-              <li><a href="" aria-label="Facebook"></a></li>
-              <li><a href="" aria-label="LinkedIn"></a></li>
-            </ul>
-          </li>
-          <li>
-            <img
-              src="./images/barber-2.jpg"
-              alt="working barber"
-              width="370"
-              height="346"
-            />
-            <h4>Michele Doe</h4>
-            <p>Extreme Barber</p>
-            <ul class="list">
-              <li><a href="" aria-label="Instagram"></a></li>
-              <li><a href="" aria-label="Twitter"></a></li>
-              <li><a href="" aria-label="Facebook"></a></li>
-              <li><a href="" aria-label="LinkedIn"></a></li>
-            </ul>
-          </li>
-          <li>
-            <img
-              src="./images/barber-3.jpg"
-              alt="working barber"
-              width="370"
-              height="346"
-            />
-            <h4>Alan Black</h4>
-            <p>Extreme Barber</p>
-            <ul class="list">
-              <li><a href="" aria-label="Instagram"></a></li>
-              <li><a href="" aria-label="Twitter"></a></li>
-              <li><a href="" aria-label="Facebook"></a></li>
-              <li><a href="" aria-label="LinkedIn"></a></li>
-            </ul>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <p>for true enjoyers of the atmosphere</p>
+          <h2>Our barbers</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/barber-1.jpg"
+                alt="working barber"
+                width="370"
+                height="346"
+              />
+              <h3>John Smith</h3>
+              <p>Extreme Barber</p>
+              <ul class="list">
+                <li><a href="" aria-label="Instagram"></a></li>
+                <li><a href="" aria-label="Twitter"></a></li>
+                <li><a href="" aria-label="Facebook"></a></li>
+                <li><a href="" aria-label="LinkedIn"></a></li>
+              </ul>
+            </li>
+            <li>
+              <img
+                src="./images/barber-2.jpg"
+                alt="working barber"
+                width="370"
+                height="346"
+              />
+              <h4>Michele Doe</h4>
+              <p>Extreme Barber</p>
+              <ul class="list">
+                <li><a href="" aria-label="Instagram"></a></li>
+                <li><a href="" aria-label="Twitter"></a></li>
+                <li><a href="" aria-label="Facebook"></a></li>
+                <li><a href="" aria-label="LinkedIn"></a></li>
+              </ul>
+            </li>
+            <li>
+              <img
+                src="./images/barber-3.jpg"
+                alt="working barber"
+                width="370"
+                height="346"
+              />
+              <h4>Alan Black</h4>
+              <p>Extreme Barber</p>
+              <ul class="list">
+                <li><a href="" aria-label="Instagram"></a></li>
+                <li><a href="" aria-label="Twitter"></a></li>
+                <li><a href="" aria-label="Facebook"></a></li>
+                <li><a href="" aria-label="LinkedIn"></a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Our portfolio -->
-      <section>
-        <p>in Latin, "barba" means "beard"</p>
-        <h2>Gallery</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/gallery-1.jpg"
-              alt="barbers work example"
-              width="270"
-              height="360"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/gallery-2.jpg"
-              alt="barbers work example"
-              width="270"
-              height="360"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/gallery-3.jpg"
-              alt="barbers work example"
-              width="270"
-              height="360"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/gallery-4.jpg"
-              alt="barbers work example"
-              width="270"
-              height="360"
-            />
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <p>in Latin, "barba" means "beard"</p>
+          <h2>Gallery</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/gallery-1.jpg"
+                alt="barbers work example"
+                width="270"
+                height="360"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/gallery-2.jpg"
+                alt="barbers work example"
+                width="270"
+                height="360"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/gallery-3.jpg"
+                alt="barbers work example"
+                width="270"
+                height="360"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/gallery-4.jpg"
+                alt="barbers work example"
+                width="270"
+                height="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Online booking -->
-      <section>
-        <h2>Online-booking</h2>
+      <section class="section">
+        <div class="container">
+          <h2>Online-booking</h2>
+        </div>
       </section>
 
       <!-- Contacts -->
-      <section>
-        <h2>Contacts</h2>
-        <address>
-          <ul class="list">
-            <li>
-              <a
-                class="link"
-                href="https://maps.app.goo.gl/zaZMUa1HUWE6Ueb98"
-                target="_blank"
-                rel="noreferrer noopener nofollow"
-                >st. Vasilkovaya, 7A<br />Kiev, 08132</a
-              >
-            </li>
-            <li>
-              <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
-            </li>
-            <li>
-              <a class="link" href="mailto:barbershop@email.com"
-                >barbershop@email.com</a
-              >
-            </li>
-          </ul>
-        </address>
-        <h3>working hours</h3>
-        <p>Every day from 9:00 to 22:00</p>
+      <section class="section">
+        <div class="container">
+          <h2>Contacts</h2>
+          <address>
+            <ul class="list">
+              <li>
+                <a
+                  class="link"
+                  href="https://maps.app.goo.gl/zaZMUa1HUWE6Ueb98"
+                  target="_blank"
+                  rel="noreferrer noopener nofollow"
+                  >st. Vasilkovaya, 7A<br />Kiev, 08132</a
+                >
+              </li>
+              <li>
+                <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
+              </li>
+              <li>
+                <a class="link" href="mailto:barbershop@email.com"
+                  >barbershop@email.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <h3>working hours</h3>
+          <p>Every day from 9:00 to 22:00</p>
+        </div>
       </section>
     </main>
 
     <footer>
-      <p>&#169; Copyright 2020</p>
-      <ul class="list">
-        <li>
-          <a
-            class="link"
-            href=""
-            target="_blank"
-            rel="noopener noreferrer nofollow"
-            >Instagram</a
-          >
-        </li>
-        <li>
-          <a
-            class="link"
-            href=""
-            target="_blank"
-            rel="noopener noreferrer nofollow"
-            >Youtube</a
-          >
-        </li>
-      </ul>
+      <div class="container">
+        <p>&#169; Copyright 2020</p>
+        <ul class="list">
+          <li>
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a
+              class="link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Youtube</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
