--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               >
             </li>
           </ul>
-          <div class="hero-content">
+          <div class="hero-content hero-overlay">
             <p class="subtitle">A hair salon for men in Kyiv</p>
             <h1>BarberShop</h1>
             <p class="hero-bottom-content">
@@ -119,37 +119,39 @@
           <div class="prices-content">
             <ul class="prices-list">
               <li class="prices-item">
-                <p class="prices-item-text">Men’s haircut</p>
+                <p class="prices-item-text left">Men’s haircut</p>
                 <p class="prices-item-text">from 300 uah.</p>
               </li>
               <li class="prices-item">
-                <p class="prices-item-text">Beard trim</p>
+                <p class="prices-item-text left">Beard trim</p>
                 <p class="prices-item-text">from 300 uah.</p>
               </li>
               <li class="prices-item">
-                <p class="prices-item-text">Mustache trim</p>
+                <p class="prices-item-text left">Mustache trim</p>
                 <p class="prices-item-text">from 200 uah.</p>
               </li>
               <li class="prices-item">
-                <p class="prices-item-text">Straight razor shave</p>
+                <p class="prices-item-text left">Straight razor shave</p>
                 <p class="prices-item-text">from 200 uah.</p>
               </li>
             </ul>
             <ul class="prices-list">
               <li class="prices-item">
-                <p class="prices-item-text">Trainee’s haircut</p>
+                <p class="prices-item-text left">Trainee’s haircut</p>
                 <p class="prices-item-text">from 50 uah.</p>
               </li>
               <li class="prices-item">
-                <p class="prices-item-text">Haircut under the nozzle</p>
+                <p class="prices-item-text left">Haircut under the nozzle</p>
                 <p class="prices-item-text">from 200 uah.</p>
               </li>
               <li class="prices-item">
-                <p class="prices-item-text">Children’s haircut (0-12 y.o.)</p>
+                <p class="prices-item-text left">
+                  Children’s haircut (0-12 y.o.)
+                </p>
                 <p class="prices-item-text">from 300 uah.</p>
               </li>
               <li class="prices-item">
-                <p class="prices-item-text">Camouflage of gray hair</p>
+                <p class="prices-item-text left">Camouflage of gray hair</p>
                 <p class="prices-item-text">from 200 uah.</p>
               </li>
             </ul>
