--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     </main>
 
     <footer>
-      <div class="container">
+      <div class="footer container">
         <p>&#169; Copyright 2020</p>
         <ul>
           <li>
