updating hero screen

--- a/index.html
+++ b/index.html
@@ -50,26 +50,28 @@
       <!-- Hero screen -->
       <section class="hero">
         <div class="container hero-container">
-          <ul class="hero social-list">
-            <li class="hero social-item">
-              <a
-                class="link social-links"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >Instagram</a
-              >
-            </li>
-            <li class="hero social-item">
-              <a
-                class="link social-links"
-                href=""
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >Youtube</a
-              >
-            </li>
-          </ul>
+          <div class="social-list-wrap">
+            <ul class="hero social-list">
+              <li class="hero social-item">
+                <a
+                  class="link social-links"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Instagram</a
+                >
+              </li>
+              <li class="hero social-item">
+                <a
+                  class="link social-links"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Youtube</a
+                >
+              </li>
+            </ul>
+          </div>
           <div class="hero-content hero-overlay">
             <p class="subtitle">A hair salon for men in Kyiv</p>
             <h1>BarberShop</h1>
